added the new blog article 新規ブログ記事を追加

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
 html, body{padding:0;}
+body{
+    min-height: 100%;
+}
 h1,h2,h3,h4,h5,h6{margin:0;}
 header, footer{
     width: 100%;
@@ -81,6 +84,7 @@ a div{
     box-shadow: 10px 10px 15px -10px;
 }
 /**markdown 内容のcss**/
+.markdown h1,
 .markdown h2,
 .markdown h3,
 .markdown h4,
