--- a/css/main.css
+++ b/css/main.css
@@ -1,87 +1,122 @@
-html, body{padding:0;}
-body{
-    min-height: 100%;
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f9;
+    color: #333;
+    display: flex;
+    /* サイドバーとメインコンテンツを横並びにする */
 }
-h1,h2,h3,h4,h5,h6{margin:0;}
-header, footer{
-    width: 100%;
-    background-color: #2e5;
-    margin-top: 10px;
+
+header {
     text-align: center;
-}.header h1{
-    color: #00f;
-    margin-bottom: 0;
-}.header p{margin-bottom: 0px;}
-.side_content{
-    overflow: hidden;
-}.side_item{
-    padding: 10px;
-    float: left;
-}.side_item.side{
-    margin-right: 5px;
-    width: 20%;
-    background-color: orange;
-}.side_item.main{
-    padding-left: 25px;
-    width: 70%;
-    max-width: 75%;
-    height: 100%;
+    padding: 2rem;
+    background-color: #0078d7;
+    color: white;
 }
-.header_nav{display: none;}
-@media screen and (max-width:700px) {
-    .side_item{
-        float: none;
-    }.side_item.side{
-        display: none;
-    }.side_item.main{
-        height: 100%;
-    }
-    .header_nav{
-        display: block;
-        background-color: orange;
-        text-align: center;
-    }.header_nav nav a{
-        margin: 5px;
-        display: inline-block;
-        background-color: #08f;
-        padding: 2px;
-        padding-right: 20px;
-    }
-}
-nav a{
+
+.profile-pic {
     display: block;
+    margin: 1rem auto;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+}
+
+main {
+    flex: 1;
+    /* メインコンテンツを広げる */
+    margin: 2rem;
+}
+
+section{
+    margin: 2rem auto;
+    max-width: 800px;
+    padding: 1rem;
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+a{
     text-decoration: none;
-    width: fit-content;
-    color: black;
-    border-radius: 5px;
-    transition: 1s;
-    padding: .3em 2em .3em .3em;
-    margin-bottom: 3px;
-}nav a::before{
+    color: #333;
+}
+
+/* ブログ一覧カード */
+.search a div {
+    margin: 1rem 0;
+    padding: 1rem;
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.search a div:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #333;
+    color: white;
+}
+
+/* サイドバーのスタイル */
+.sidebar {
+    width: 250px;
+    background-color: #0078d7;
+    color: white;
+    padding: 1rem;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.sidebar h2 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar ul li {
+    margin: 0.5rem 0;
+}
+
+.sidebar ul li a {
+    color: white;
+    text-decoration: none;
+    width: calc(100% - 3em);
+    display: block;
+    padding: 0.5rem;
+    border-radius: 4px;
+    transition: 0.5s;
+}.sidebar ul li a::before {
     content: "▶";
     opacity: 0;
-    transition: 1s;
-}nav a:hover{
-    background-color: #08f;
-    transform: translateX(15px);
-}nav a:hover::before{
+}
+
+.sidebar ul li a:hover {
+    background-color: #005a9e;
+    transform: translateX(1em);
+}
+.sidebar ul li a:hover::before {
+    display: inline-block;
     opacity: 1;
 }
-a div{
-    width: 80%;
+img{
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    max-width: 100%;
+    height: auto;
     margin: 10px;
-    padding: 5px;
-    background-color: #fff;
-    border: 1px solid #aaa;
-    border-radius: 10px;
-    display: inline-block;
-    transition: all .5s 0s linear;
-    vertical-align: top;    /*上揃え*/
-    color: black;
-    text-decoration-line: none;
-}a div:hover{
-    transform: translateY(-5px);
-    box-shadow: 10px 10px 15px -10px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 /**markdown 内容のcss**/
 .markdown h1,
@@ -89,7 +124,7 @@ a div{
 .markdown h3,
 .markdown h4,
 .markdown h5,
-.markdown h6{
+.markdown h6 {
     width: fit-content;
     padding-right: 2em;
     margin-bottom: 1em;
@@ -97,25 +132,52 @@ a div{
     border-bottom: 3px solid #3af;
     border-left: 2px solid #3af;
 }
+
 /** pre code **/
-code{
-	border-radius: 5px;
-	background-color: #133;
-	color: #fff;
-	padding: 3px 1.5px;
-	margin: 3px;
+code {
+    border-radius: 5px;
+    background-color: #133;
+    color: #fff;
+    padding: 3px 1.5px;
+    margin: 3px;
 }
-pre code{
-	border-radius: 10px;
+
+pre code {
+    border-radius: 10px;
 }
-.code_name{
-	color: #fff;
-	background-color: #5e6060;
-	border-radius: 0px 0px 5px 5px;
-	padding: 5px 10px;
-	margin: 0px 5px 5px 5px;
-	width: fit-content;
-	position: relative;
-	top: -15px;
+
+.code_name {
+    color: #fff;
+    background-color: #5e6060;
+    border-radius: 0px 0px 5px 5px;
+    padding: 5px 10px;
+    margin: 0px 5px 5px 5px;
+    width: fit-content;
+    position: relative;
+    top: -15px;
 }
-/** pre code **/
+
+/* レスポンシブ対応 */
+@media screen and (max-width: 700px) {
+    .side_item.side {
+        display: none;
+    }
+
+    .side_item.main {
+        margin: 1rem;
+    }
+
+    .header_nav {
+        display: block;
+        background-color: orange;
+        text-align: center;
+    }
+
+    .header_nav nav a {
+        margin: 5px;
+        display: inline-block;
+        background-color: #08f;
+        padding: 2px;
+        padding-right: 20px;
+    }
+}
