--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@ body {
     padding: 0;
     background-color: #f4f4f9;
     color: #333;
-    display: flex;
+    width: 100vw;
+    /* display: flex; */
     /* サイドバーとメインコンテンツを横並びにする */
 }
 
@@ -25,7 +26,9 @@ header {
 }
 
 main {
-    flex: 1;
+    width: 80%;
+    /* サイドバーの幅を除いた残りの幅を使用 */
+    /* flex: 1; */
     /* メインコンテンツを広げる */
     margin: 2rem;
 }
@@ -112,13 +115,17 @@ footer {
 img{
     border: 1px solid #ccc;
     border-radius: 5px;
-    max-width: 100%;
+    max-width: 80%;
     height: auto;
     margin: 10px;
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 /**markdown 内容のcss**/
+/* .markdown{
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+} */
 .markdown h1,
 .markdown h2,
 .markdown h3,
@@ -132,7 +139,10 @@ img{
     border-bottom: 3px solid #3af;
     border-left: 2px solid #3af;
 }
-
+.markdown a{
+    /* overflow: hidden; */
+    word-break: break-all;
+}
 /** pre code **/
 code {
     border-radius: 5px;
